--- a/mythical-mysfits/module-2/web/index.html
+++ b/mythical-mysfits/module-2/web/index.html
@@ -79,8 +79,8 @@
   </body>
   <script>
 
-   // example: 'http://mythi-publi-abcd12345-01234567890123.elb.us-east-1.amazonaws.com'
-   var mysfitsApiEndpoint = 'http://mysfits-nlb-fcfa4f9fed98f0f2.elb.us-east-1.amazonaws.com';
+   var mysfitsApiEndpoint = 'http://http://mysfits-nlb-fcfa4f9fed98f0f2.elb.us-east-1.amazonaws.com'; // example: 'http://mythi-publi-abcd12345-01234567890123.elb.us-east-1.amazonaws.com'
+   // var mysfitsApiEndpoint = 'REPLACE_ME'; // example: 'http://mythi-publi-abcd12345-01234567890123.elb.us-east-1.amazonaws.com'
 
    var app = angular.module('mysfitsApp', []);
 
